@@ -55,3 +55,6 @@ dev.1.0.15.20240603
 
 dev.1.0.16.20240605
 1. fix bug of Tensor.index with two inputs
+
+dev.1.0.17.20240606
+1. Add trans_TensorTypeAs2TensorTo pass in pass level 7
